# SOCAI-Web

./: COMPLETE_FEATURES.md  DEVELOPMENT.md  Dockerfile  IMPROVEMENTS.md  Makefile  QUICKSTART.md  README.md  Repo_Layout  WEB_INTERFACE.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-full.sh  setup.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Chart.js  Layout.js  LoadingSpinner.js  RecentAlerts.js  StatCard.js
frontend/src/pages/: AlertDetail.js  Alerts.js  Dashboard.js
frontend/src/services/: api.js
kali-mcp-server/: Dockerfile  README.md  server.py
scripts/: gen_schema.py
src/soc_agent/: __init__.py  analyzer.py  api.py  autotask.py  config.py  database.py  logging.py  models.py  notifiers.py  security.py  webapp.py
src/soc_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/soc_agent/adapters/: __init__.py  crowdstrike.py  wazuh.py
src/soc_agent/intel/: __init__.py  client.py
src/soc_agent/intel/providers/: abuseipdb.py  otx.py  virustotal.py
tests/: conftest.py  test_adapters.py  test_analyzer.py  test_integration.py  test_intel.py  test_models.py  test_security.py  test_webhook.py
